test_data/Xml/Unexpected/Unserializable/InvalidClassName/extension/wrong.xml.exception
Expected an element representing an instance of class Extension with element name extension, but got: utterlyInvalid at: the beginning